Fix a bug on iPhone: carousel was not displayed anymore

--- a/src/layouts/list-map/_style.scss
+++ b/src/layouts/list-map/_style.scss
@@ -237,6 +237,7 @@
 
     .layout-content-list {
       position: inherit;
+      -webkit-overflow-scrolling: inherit;
 
       span.back-search-btn {
         display: none !important;
